fixed look and feel of header in channels actions. The menu actions were invisible :$

--- a/app/assets/stylesheets/resources/channels/_general.sass
+++ b/app/assets/stylesheets/resources/channels/_general.sass
@@ -2,19 +2,11 @@
 @import icomoon
 // Channels Styles/Classes that will be reused
 body[data-namespace="channels"]
-  font-family: 'Lato', 'Arial', sans-serif 
   background: $body_background
   #header
-    padding: .4em 0
     margin: 0 auto
-    .actions, .search, .menu a:first-child
+    .search, .menu > a:first-child
       visibility: hidden
-    .menu
-      text-align: right
-      a
-        font-size: 1.1em
-        &:hover
-          text-decoration: underline
   #locales, #footer, #logos
     display: none !important
   .container
